--- a/index.html
+++ b/index.html
@@ -379,12 +379,12 @@
                     <div class="wpb_wrapper">
                         <div class="tzourstory">
                             <div class="container">
-                                <h3 class="title_ourstory">Belém: 400 anos de muitas histórias</h3>
+                                <h3 class="title_ourstory">BELÉM: 400 ANOS DE MUITAS HISTÓRIAS</h3>
                                 <div class="ourstory_content">
                                    
 
-                                    <p>“Belém Belém, és minha bandeira, és a flor que cheira no Grão-Pará”</p>
-                                    <p>(Chico Senna)</p>
+                                    <p>“Belém Belém, és minha bandeira, és a flor que cheira no Grão-Pará”<br />
+                                    (Chico Senna)</p>
 
                                     <p>Não podemos falar de Belém, nem da importância de comemorar seus 400 anos, sem relembrar um pouco da história dessa nossa cidade Morena. Nos idos tempos de 1616, na região que até então era habitada pelo bravo povo tupinambá, é onde começa esta jornada. Mais precisamente no dia 12 de janeiro daquele ano, Francisco Caldeira Castelo Branco, fundou o Forte do Castelo do Senhor Santo Cristo do Presépio de Belém, um ponto estratégico fundamental na conquista da foz do Rio Amazonas por parte de Portugal.</p>
                                     <p> O povoado que se formou ao redor do forte, conhecido por todos nós hoje como Forte do Castelo, chamou-se, inicialmente, Feliz Lusitânia. Com o tempo foi recebendo outros nomes como Santa Maria do Grão Pará, Santa Maria de Belém do Grão Pará e finalmente Belém do Pará, a primeira capital da Amazônia.</p>
