--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                                 <div class="ourstory_content">
                                    
 
-                                    <p>“Belém Belém, és minha bandeira, és a flor que cheira no Grão-Pará”<br />
+                                    <p style="text-align:right">“Belém Belém, és minha bandeira, és a flor que cheira no Grão-Pará”<br />
                                     (Chico Senna)</p>
 
                                     <p>Não podemos falar de Belém, nem da importância de comemorar seus 400 anos, sem relembrar um pouco da história dessa nossa cidade Morena. Nos idos tempos de 1616, na região que até então era habitada pelo bravo povo tupinambá, é onde começa esta jornada. Mais precisamente no dia 12 de janeiro daquele ano, Francisco Caldeira Castelo Branco, fundou o Forte do Castelo do Senhor Santo Cristo do Presépio de Belém, um ponto estratégico fundamental na conquista da foz do Rio Amazonas por parte de Portugal.</p>
