--- a/index.html
+++ b/index.html
@@ -351,12 +351,12 @@
                 </div>
             </div>
         </div>
-        <div class="vc_row wpb_row vc_row-fluid vc_custom_1423134011704" id="agenda">
+        <div class="vc_row wpb_row vc_row-fluid vc_custom_1423198729821" id="agenda">
             <div class="container" >
                 <div class="row"  >
                     <div class="vc_col-sm-12 wpb_column vc_column_container ">
                         <div class="wpb_wrapper">
-                            <div class="container-custom">
+                            <div class="container">
                                 <h3 class="title_ourstory">AGENDA BELÉM 400 ANOS</h3>
 
                                 <div id="" class="timelineLoader" style="display: none;">
