--- a/galeria.html
+++ b/galeria.html
@@ -36,14 +36,10 @@
     <link rel='stylesheet' id='style-css' href='style.css' type='text/css' media='all' />
     <link rel='stylesheet' href='style-inline.css' type='text/css' media='all' />
     <link rel='stylesheet' id='js_composer_front-css' href='css/js_composer_front.css' type='text/css' media='all' />
-    <!-- Latest compiled and minified CSS -->
-  
     <script type='text/javascript' src='js/jquery/jquery.js'></script>
-   
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" />
-
+    <script type='text/javascript' src='js/jquery/jquery-migrate.min.js'></script>
+    <script type='text/javascript' src='js/revslider/jquery.themepunch.tools.min.js'></script>
+    <script type='text/javascript' src='js/revslider/jquery.themepunch.revolution.min.js'></script>
     <script type="text/javascript">
         var themeprefix = 'plazart';
         var imgpath = 'images/';
@@ -54,7 +50,9 @@
 </head>
 <body id="bd" class="home page page-id-13 page-template page-template-template-vc page-template-template-vc-php  wpb-js-composer js-comp-ver-4.4.2 vc_responsive tribe-theme-everline">
 
-   
+    <div id="tzloadding">
+        <img class="loadding_img" src="images/timeload.GIF" alt="Image">
+    </div>
     <div class="everline_boxed">
         <header class="tz-header tz-header-page" style="height: 85px">
             <div class="container" style="margin: -50px 0 0 0">
@@ -72,14 +70,8 @@
                 </nav>
             </div>
         </header>
-        <div class="tzform-search">
-            <img class="tzcontro_search" src="images/icon_search_delete.png" alt="icon search">
-            <form method="get" id="searchform" action="#">
-                <label class="icon-search">&nbsp;</label>
-                <label for="s" class="assistive-text assistive-tzsearch">Search</label>
-                <input type="text" class="field Tzsearchform inputbox search-query" name="s" id="s" placeholder="Search..." />
-                <input type="submit" class="submit" name="submit" id="searchsubmit" value="Search" />
-            </form>
+        <div id="busca" class="tzform-search">
+
         </div>
         <div class="single_post" style="padding: 32px 96px 1px 63px !important; ">
             <div class="container">
@@ -120,12 +112,29 @@
 
 
 
-
-
+    <script type='text/javascript' src='js/contact-form-7/jquery.form.min.js'></script>
+    <script type='text/javascript' src='js/contact-form-7/scripts.js'></script>
+    <script type='text/javascript' src='js/woocommerce/add-to-cart.min.js'></script>
+    <script type='text/javascript' src='js/woocommerce/jquery.blockUI.min.js'></script>
+    <script type='text/javascript' src='js/woocommerce/woocommerce.min.js'></script>
+    <script type='text/javascript' src='js/woocommerce/jquery.cookie.min.js'></script>
+    <script type='text/javascript' src='js/woocommerce/cart-fragments.min.js'></script>
     <script type='text/javascript' src='js/bootstrap.min.js'></script>
-   
+    <script type='text/javascript' src='js/jquery.parallax-1.1.3.js'></script>
+    <script type='text/javascript' src='js/owl.carousel.js'></script>
+    <script type='text/javascript' src='js/jquery.flexslider.js'></script>
+    <script type='text/javascript' src='js/off-canvas.js'></script>
+    <script type='text/javascript' src='js/everlinecookie.js'></script>
+    <script type='text/javascript' src='js/js_composer_front.js'></script>
+    <script type='text/javascript' src='js/countdown.js'></script>
+    <script type='text/javascript' src='js/jquery.isotope.min.js'></script>
+    <script type='text/javascript' src='js/custom-portfolio.js'></script>
+    <script type='text/javascript' src='js/jquery.jplayer.min.js'></script>
+    <script type='text/javascript' src='js/jplayer.playlist.min.js'></script>
+    <script type='text/javascript' src='js/custom.js'></script>
     <script src="js/jquery.simplePagination.js"></script>
     <script src="js/jsrender.min.js"></script>
+    <script src="js/modernizr.js"></script>
     <script src="js/jquery.ui.datepicker.js"></script>
     <script src="js/busca.js"></script>
     <script src="js/script.js"></script>
