--- a/_buscar.html
+++ b/_buscar.html
@@ -1,5 +1,5 @@
 ﻿<img class="tzcontro_search" src="images/icon_search_delete.png" alt="icon search">
-<form method="get" id="searchform" action="/noticias.html">
+<form method="get" id="searchform" action="noticias.html">
     <label class="icon-search">&nbsp;</label>
     <label for="s" class="assistive-text assistive-tzsearch">Search</label>
     <input type="text" style="color:#000" class="field Tzsearchform inputbox search-query" name="termo" id="termo" placeholder="Buscar..." />
