--- a/_menu.html
+++ b/_menu.html
@@ -6,17 +6,17 @@
 
                                 </li>
                                 <li id="menu-item-397" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor menu-item-has-children">
-                                    <a href="#">Belém 400 anos</a>
+                                    <a href="noticias.html">Belém 400 anos</a>
                                     <div class='themeple_custom_menu_mega_menu themeple_mega2'>
 
                                     </div>
                                 </li>
                                 <li id="menu-item-183" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children">
-                                    <a href="blog.html">Curiosidades</a>
+                                    <a href="noticias.html?filtro=CuriosidadesBelem400anos">Curiosidades</a>
 
                                 </li>
                                 <li id="menu-item-279" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
-                                    <a href="#">Memórias</a>
+                                    <a href="noticias.html?filtro=MemóriasBelem400anos">Memórias</a>
 
                                 </li>
                                 <li id="menu-item-279" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
