--- a/downloads.html
+++ b/downloads.html
@@ -90,7 +90,10 @@
 
                         <h3>Donwloads</h3>
                      <table>
-                         <tr>
+                         <tr style="
+    background-color: #2F326B;
+    color: #fff;
+">
                              <th>
                                  Nome
                              </th>
@@ -103,7 +106,7 @@
                                  Marca Belém 400 anos
                              </td>
                              <td>
-                                 <a href="http://www.agenciabelem.com.br/arquivos/Logo400anosPMB.pdf" download="Marca Oficial Belem 400 anos.pdf"><i class="glyphicon glyphicon-chevron-down"></i>Baixar</a> 
+                                 <a class="btn btn-info" href="http://www.agenciabelem.com.br/arquivos/Logo400anosPMB.pdf" download="Marca Oficial Belem 400 anos.pdf"><i class="glyphicon glyphicon-chevron-down"></i> Baixar</a> 
                              </td>
                          </tr>
                      </table>
