--- a/evento.html
+++ b/evento.html
@@ -169,7 +169,7 @@
                         </span>
                         <div class="single-content">
                            Local: {{:local}}<br />
-                            Detalhamento: {{:texto}}
+                            Detalhes: {{:texto}}
                            
                         </div>
                       
