--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                                  data-endelementdelay="0.1"
                                                  data-endspeed="400"
                                                  data-endeasing="Power4.easeOut">
-                                                Show em comemoração as 400 anos de Belém <br>Cantando todo seu amor por Belém!
+                                                Show em comemoração aos 400 anos de Belém <br>Cantando todo seu amor por Belém!
                                             </div>
                                             <!-- LAYER NR. 5 -->
                                             <div class="tp-caption slider_dateevent sfb stb tp-resizeme"
