--- a/_menu.html
+++ b/_menu.html
@@ -12,7 +12,7 @@
                                     </div>
                                 </li>
                                 <li id="menu-item-183" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children">
-                                    <a href="noticias.html?filtro=CuriosidadesBelem400anos">Curiosidades</a>
+                                    <a href="curiosidades.html">Curiosidades</a>
 
                                 </li>
                                 <li id="menu-item-279" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
