--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                                     var b = buscaAPI('http://api.sgn.net.br/Api/Foto/3?dataIni=&dataFim=&idOrgao=&termo=&filtro=Belem400anos&itens=4&page=1', "templateGaleria", "galerias");
                                     var c = buscaAPI('http://api.sgn.net.br/Api/video/3?dataIni=&dataFim=&idOrgao=&termo=&filtro=Belem400anos&itens=4&page=1', "templateVideo", "galerias");
                                     //var d = buscaAPI('http://api.sgn.net.br/Api/Noticia/5?dataIni=&dataFim=&idOrgao=&termo=&filtro=Belem400anos&itens=100&order=asc', "templateTimeLine", "tl1");
-                                    var d = buscaAPI('http://api.sgn.net.br/Api/AgendaTodas/3?dataIni=' + dataIni + '&dataFim=&idOrgao=&termo=&filtro=&order=asc&itens=100&page=1', "templateTimeLine", "tl1");
+                                    var d = buscaAPI('http://api.sgn.net.br/Api/AgendaTodas/3?dataIni=' + dataIni + '&dataFim=&idGrupo=3&termo=&filtro=&order=asc&itens=100&page=1', "templateTimeLine", "tl1");
                                 })
                             </script>
 </body>
