--- a/_menu.html
+++ b/_menu.html
@@ -20,7 +20,7 @@
 
                                 </li>
                                 <li id="menu-item-279" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
-                                    <a href="/downloads.html">Downloads </a>
+                                    <a href="downloads.html">Downloads </a>
 
                                 </li>
                              
